--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,127 @@ body {
     margin: 0 auto; /* center image horizontally */
     padding: 20px;
 }
+
+.feed-selector {
+    text-align: left;
+    font-size: 20px;
+    color: white;
+    display: block;
+    height: 500px;
+    width: 25%;   
+    float: left;
+    align-items: left;
+    justify-content: left;
+}
+
+#first-edition-logo {  
+    width: 30px;
+    padding-left: 15px;
+    padding-bottom: 30px;
+}
+
+#global-logo {
+    width: 30px;
+    padding-left: 15px;
+    padding-bottom: 30px;
+}
+
+.messages-logo {
+    width: 30px;
+    padding-left: 15px;
+    padding-bottom: 30px;
+}
+
+.publish-logo {
+    width: 30px;
+    padding-left: 15px;
+    padding-bottom: 30px;
+}
+
+.articles {
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+    width: 50%;
+    float: left;
+}
+
+#card-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    height: 55vh;
+    width: calc((100% / 3) - 16px);
+    margin: 8px;
+    border-radius: 3px;
+    transition: all 200ms ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.card-actions {
+    margin: 8px;
+    padding: 16px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#loader {
+    display: flex;
+}
+
+.skeleton-card {
+    height: 55vh;
+    width: calc((100% / 3) - 16px);
+    margin: 8px;
+    border-radius: 3px;
+    transition: all 200ms ease-in-out;
+    position: relative;
+    background-color: #eaeaea;
+}
+
+.skeleton-card::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateX(-100%);
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0.5) 60%, rgba(255, 255, 255, 0));
+    animation: load 1s infinite;
+}
+@keyframes load {
+    100% {
+        transform: translateX(100%);
+    }
+}
+  
+.right-section {
+    text-align: right;
+    font-size: 20px;
+    color: white;
+    display: block;
+    align-items: right;
+    justify-content: right;
+    height: 500px;
+    width: 25%;
+    float: left;
+}
+
+#search-logo{
+    width: 20px;
+}
+
+
