--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ body {
     border-radius: 10px;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
+    border: 0px;
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
