--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,6 @@ body {
 
 .feed-selector {
     text-align: left;
-    font-size: 20px;
     color: white;
     display: block;
     height: 500px;
@@ -98,7 +97,20 @@ body {
     height: 30px;
 }
 
-/* The Modal (background) */
+#settings-button {
+    background-color: transparent;
+    border: 0px;
+    width: 30px;
+    height: 30px;
+}
+
+#settingsLogo {
+    width: 30px;
+    padding-left: 15px;
+    padding-bottom: 30px;
+}
+
+/* The Publsih Modal (background) */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -112,7 +124,7 @@ body {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
+/* Publish Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
     border-radius: 10px;
@@ -161,6 +173,54 @@ body {
     border: 0px;
 }
 
+.settings-modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */   
+}
+
+
+.settings-modal-content {
+    background-color: #fefefe;
+    border-radius: 10px;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 0px;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+
+.settingsClose {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;  
+}
+
+.settingsClose:hover,
+.settingsClose:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer; 
+}
+
+
+#saveChangesButton {
+    font: 'Fira Sans', sans-serif;
+    font-size: 15px;
+    color: white;
+    border-radius: 5px;
+    background-color: rgb(252, 169, 3);
+    border: 0px; 
+}
+
 .articles {
     text-align: center;
     font-size: 20px;
@@ -172,6 +232,17 @@ body {
     width: 50%;
     float: left;
 }
+
+.userInfo {
+    align-items: left;
+    justify-content: left;
+}
+
+#userName {
+    font-size: 10px;
+}
+
+
 
 #card-container {
     display: flex;
@@ -213,7 +284,7 @@ body {
     border-radius: 3px;
     transition: all 200ms ease-in-out;
     position: relative;
-    background-color: #eaeaea;
+    background-color: #ffffff;
 }
 
 .skeleton-card::after {
